Fixed extra space of the posts wrapper and added the legendary for the signup form

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -119,6 +119,12 @@ form{
   margin-bottom: 20rem;
   gap: 10rem;
 }
+.signup-wrapper{
+  margin-top: 10rem;
+}
+.signup-wrapper{
+  flex-direction: column;
+}
 .login-form,
 .signup-form {
   width: 40vw;
@@ -127,8 +133,14 @@ form{
 }
 @media only screen and (max-width: 480px){
   .signup-form{
-    height: 700px;
+    height: 650px;
     padding: 2rem 1rem;
+  }
+  .login-wrapper,
+  .signup-wrapper{
+    margin-top: 10rem;
+    gap: 3rem;
+    flex-direction: column;
   }
 }
 
@@ -152,10 +164,6 @@ form{
 @media only screen and (max-width: 480px) {
   .google-signin-container a {
     font-size: 1rem;
-  }
-  .login-wrapper{
-    flex-direction: column;
-    gap: 3rem;
   }
 }
 
@@ -184,10 +192,24 @@ form{
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  padding: 7px; 
+  padding: 1rem; 
   border-radius: 3rem;
   color: white;
   background-color: #080b01;
+}
+.signup-wrapper .hr-text{
+  width: 40%;
+  height: 2rem;
+}
+.signup-wrapper .hr-text::before{
+  width: 100%;
+  height: 4px;
+  top: 50%;
+  left: 0
+}
+.signup-wrapper .hr-text::after{
+  background-color: #cfcbca;
+  padding: 0.5rem;
 }
 @media only  screen and (max-width: 480px) {
   .hr-text{
@@ -199,6 +221,10 @@ form{
     height: 2px;
     top: 50%;
     left: 0;
+  }
+  .signup-wrapper .hr-text{
+    width: 90%;
+    height: 2rem;
   }
 }
 
@@ -277,7 +303,6 @@ nav {
   position: absolute;
   top: 0;
   right: 0;
-
 }
 @media only screen and (max-width: 480px) {
   nav {
@@ -587,12 +612,18 @@ a {
   align-items: center;
   margin-top: 10rem;
 }
+@media only screen  and (max-width: 480px){
+  .posts-wrapper,
+.form-wrapper,
+.profile-wrapper {
+  margin-top: 6rem;
+}
+.post-wrapper{
+  margin-top: 10rem;
+}
+}
 .form-wrapper{
   margin: 4rem auto 12rem;
-}
-.post-wrapper {
-  margin-top: 3rem;
-  padding-bottom: 3rem;
 }
 .form-container {
   display: flex;
